--- a/influxdb/config.json
+++ b/influxdb/config.json
@@ -24,11 +24,13 @@
   "boot": "auto",
   "ports": {
     "80/tcp": null,
-    "8086/tcp": 8086
+    "8086/tcp": 8086,
+    "8089/udp": 8089
   },
   "ports_description": {
     "80/tcp": "Web interface (Not required for Hass.io Ingress)",
-    "8086/tcp": "InfluxDB server"
+    "8086/tcp": "InfluxDB server",
+    "8089/udp": "InfluxDB UDP server"
   },
   "hassio_api": true,
   "auth_api": true,
