--- a/influxdb/rootfs/etc/influxdb/influxdb.conf
+++ b/influxdb/rootfs/etc/influxdb/influxdb.conf
@@ -17,3 +17,10 @@ reporting-disabled = false
 
 [logging]
     level="warn"
+
+[udp]
+  enabled = true
+  bind-address = "0.0.0.0:8089"
+  database = "proxmox"
+  batch-size = 1000
+  batch-timeout = "1s"
