--- a/influxdb/rootfs/etc/influxdb/influxdb.conf
+++ b/influxdb/rootfs/etc/influxdb/influxdb.conf
@@ -18,7 +18,7 @@ reporting-disabled = false
 [logging]
     level="warn"
 
-[udp]
+[[udp]]
   enabled = true
   bind-address = "0.0.0.0:8089"
   database = "proxmox"
